# clawpfp

./: .env.example  ARCHITECTURE.md  CALUDE_INX.md  Cargo.toml  Dockerfile  LICENSE.md  README.md  SKILL.md
.codebase-index/: annotations.toml  api-surface.md  cache.json  index.json  overview.md  relationships.md
data/: cnft_mint.db
docs/: ARCHITECTURE.md  CONTRIBUTING.md  LICENSE.md  SKILL_GUIDE.md
metadata/: 0.json
migrations/: 001_initial.sql
src/: config.rs  error.rs  main.rs  setup.rs  state.rs
src/db/: challenges.rs  mints.rs  mod.rs  trees.rs
src/models/: challenge.rs  mint.rs  mod.rs  tree.rs
src/routes/: challenge.rs  health.rs  mint.rs  mod.rs  status.rs
src/services/: bubblegum.rs  challenge.rs  irys.rs  metadata.rs  mod.rs  solana.rs  tree_manager.rs
