[package]
name = "clawpfp"
version = "0.1.0"
edition = "2021"
default-run = "clawpfp"

[dependencies]
# ─── Solana / Metaplex ───
solana-sdk = "~2.1"
solana-client = "~2.1"
mpl-bubblegum = "2.1"
spl-account-compression = "1.0"
spl-noop = "1.0"
borsh = "0.10"
bs58 = "0.5"

# ─── Web Framework ───
axum = { version = "0.8", features = ["json", "macros"] }
tokio = { version = "1", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace", "timeout", "fs"] }
tower_governor = "0.4"

# ─── Serialization ───
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"

# ─── Database ───
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "migrate", "chrono"] }

# ─── Crypto / Auth ───
rand = "0.8"
ed25519-dalek = "2"
base64 = "0.22"

# ─── Utilities ───
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
dotenvy = "0.15"
thiserror = "2"
anyhow = "1"

# ─── HTTP Client ───
reqwest = { version = "0.11", features = ["json", "rustls-tls"], default-features = false }
regex = "1"
sha2 = "0.10"

# ─── Logging ───
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
